Adding getResponseInputStreamFromExternalServer method to the web util for server-toserver calls